--- a/Vienna/Interfaces/fr.lproj/InfoWindow.strings
+++ b/Vienna/Interfaces/fr.lproj/InfoWindow.strings
@@ -23,7 +23,7 @@
 "121.title" = "Abonné";
 
 /* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
-"126.title" = "Afficher la page complète immédiatement";
+"126.title" = "Afficher la page Web complète";
 
 /* Class = "NSTextFieldCell"; title = "Description"; ObjectID = "E84-Uo-ybg"; */
 "E84-Uo-ybg.title" = "Description";
