--- a/Vienna/Interfaces/fr.lproj/FeedCredentials.strings
+++ b/Vienna/Interfaces/fr.lproj/FeedCredentials.strings
@@ -5,7 +5,7 @@
 "33.title" = "Nom :";
 
 /* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
-"34.title" = "L'accès à %@ nécessite de vous identifier";
+"34.title" = "L'accès à %@ demande que vous vous identifiez";
 
 /* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Mot de passe :";
@@ -14,7 +14,7 @@
 "38.title" = "S'identifier";
 
 /* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
-"39.title" = "Le nom d'utilisateur et le mot de passe fournis seront conservés pour le prochain accès à ce flux.";
+"39.title" = "Le nom d'utilisateur et le mot de passe fournis seront conservés pour les prochains accès à cet abonnement.";
 
 /* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "Lvs-Rd-GZy"; */
 "Lvs-Rd-GZy.title" = "URL :";
