--- a/Vienna/Resources/da.lproj/Localizable.strings
+++ b/Vienna/Resources/da.lproj/Localizable.strings
@@ -95,12 +95,6 @@
 /* No comment provided by engineer. */
 "Connecting to Open Reader server to retrieve %@" = "Forbinder til Open Reader serveren for at hente %@";
 
-/* No comment provided by engineer. */
-"Copy Link to Clipboard" = "Kopier henvisning til skuffe";
-
-/* No comment provided by engineer. */
-"Copy Page Link to Clipboard" = "Kopier sidehenvisning til skuffe";
-
 /* Copy URL */
 "Copy URL" = "Kopier henvisning";
 
@@ -183,9 +177,6 @@
 /* Data field name (URL) visible in menu/article list */
 "Enclosure URL" = "Indpakningshenvisning";
 
-/* No comment provided by engineer. */
-"Enter the URL here" = "Indtast URL her";
-
 /* Already subscribed title */
 "Error" = "Fejl";
 
@@ -248,9 +239,6 @@
 
 /* No comment provided by engineer. */
 "Forcing Refresh subscriptions…" = "Gennemtvinger Opdater abonnementer…";
-
-/* No comment provided by engineer. */
-"Go forward to the next page" = "Gå frem til den næste side";
 
 /* No comment provided by engineer. */
 "Got HTTP status 304 - No news from last check" = "Fik HTTP status 304 - Ingen nyheder siden sidste tjek";
@@ -342,9 +330,6 @@
 /* No comment provided by engineer. */
 "No new articles available" = "Ingen nye artikler tilgængelige";
 
-/* Title of a button on an alert */
-"OK" = "OK";
-
 /* Message text of an alert */
 "One or more downloads are in progress" = "En eller flere overførsler er igang";
 
@@ -361,15 +346,6 @@
 "Open Article Page in External Browser" = "Åben artikelside i ekstern browser";
 
 /* No comment provided by engineer. */
-"Open Frame" = "Åben ramme";
-
-/* No comment provided by engineer. */
-"Open Image in %@" = "Åben billede i %@";
-
-/* No comment provided by engineer. */
-"Open Image in New Tab" = "Åben billede i ny fane";
-
-/* No comment provided by engineer. */
 "Open Link in %@" = "Åben henvisning i %@";
 
 /* No comment provided by engineer. */
@@ -377,9 +353,6 @@
 
 /* No comment provided by engineer. */
 "Open Link in New Tab" = "Åben henvisning i ny fane";
-
-/* No comment provided by engineer. */
-"Open Page in %@" = "Åben side i %@";
 
 /* No comment provided by engineer. */
 "Open Reader Authentication Failed" = "Open Reader godkendelse fejlede";
@@ -437,9 +410,6 @@
 "Refresh completed" = "Opdatering færdig";
 
 /* No comment provided by engineer. */
-"Refresh the current page" = "Opdater den nuværende side";
-
-/* No comment provided by engineer. */
 "Refreshing folder images…" = "Opdaterer mappeikoner…";
 
 /* No comment provided by engineer. */
@@ -464,24 +434,19 @@
 "Retrieving folder image for Open Reader Feed" = "Henter mappeikon til Open Reader feed";
 
 /* No comment provided by engineer. */
-"Return to the previous page" = "Gå tilbage til den tidligere side";
-
-/* No comment provided by engineer. */
 "RSS Icon not found!" = "RSS ikon ikke fundet!";
 
 /* A formatted URL string with the javascript: URL scheme. */
 "Run script “%@”" = "Kør skriptet \"%@\"";
 
-/* Placeholder title of a search field */
-"Search all articles" = "Søg alle artikler";
-
-/* No comment provided by engineer. */
-"Search all articles or the current web page" = "Søg i alle artikler eller den nuværende hjemmeside";
-
-/* Toolbar item label
+/* Search panel title
+   Toolbar item label
    Toolbar item palette label
    Toolbar item tooltip */
-"Search Articles" = "Søg i artikler";
+"Search" = "Søg";
+
+/* Placeholder title of a search field */
+"Search all articles" = "Søg alle artikler";
 
 /* Placeholder title of a search field */
 "Search current web page" = "Søg nuværende hjemmeside";
@@ -527,9 +492,6 @@
 
 /* Data field name visible in menu/article list/smart folder definition */
 "Subject" = "Emne";
-
-/* No comment provided by engineer. */
-"Subscribe to the feed for this page" = "Abonner på feedet for denne side";
 
 /* Pseudo field name visible in menu/article list */
 "Summary" = "Resumé";
