--- a/Vienna/Resources/de.lproj/Localizable.strings
+++ b/Vienna/Resources/de.lproj/Localizable.strings
@@ -31,6 +31,9 @@
 /* No comment provided by engineer. */
 "A new Vienna database cannot be created at \"%@\" because the folder is probably located on a remote network share and this version of Vienna cannot manage remote databases. Please choose an alternative folder that is located on your local machine." = "Eine neue Vienna-Datenbank konnte in „%@“ nicht erstellt werden, weil der Ordner möglicherweise auf einem Netzwerklaufwerk liegt. Diese Version von Vienna kann nicht mit derartigen Datenbanken genutzt werden. Bitte wähle einen anderen Ordner auf deinem Mac aus.";
 
+/* Toolbar item palette label */
+"Add to Safari Reading List" = "Zur Safari-Leseliste hinzufügen";
+
 /* No comment provided by engineer. */
 "AppleScript Error in '%@' script" = "AppleScript-Fehler im Skript „%@“";
 
@@ -94,12 +97,6 @@
 
 /* No comment provided by engineer. */
 "Connecting to Open Reader server to retrieve %@" = "Verbindung mit Open Reader Server wird hergestellt um %@ zur erhalten";
-
-/* No comment provided by engineer. */
-"Copy Link to Clipboard" = "Link kopieren";
-
-/* No comment provided by engineer. */
-"Copy Page Link to Clipboard" = "Seitenlink in die Zwischenablage kopieren";
 
 /* Copy URL */
 "Copy URL" = "URL kopieren";
@@ -187,9 +184,6 @@
 /* Data field name (URL) visible in menu/article list */
 "Enclosure URL" = "Anhang URL";
 
-/* No comment provided by engineer. */
-"Enter the URL here" = "URL hier eingeben";
-
 /* Already subscribed title */
 "Error" = "Fehler";
 
@@ -252,9 +246,6 @@
 
 /* No comment provided by engineer. */
 "Forcing Refresh subscriptions…" = "Feedaktualisierung erzwingen …";
-
-/* No comment provided by engineer. */
-"Go forward to the next page" = "Die nächste Seite anzeigen";
 
 /* No comment provided by engineer. */
 "Got HTTP status 304 - No news from last check" = "HTTP-Statusmeldung 304 - keine neuen Nachrichten";
@@ -346,9 +337,6 @@
 /* No comment provided by engineer. */
 "No new articles available" = "Keine neuen Artikel verfügbar";
 
-/* Title of a button on an alert */
-"OK" = "OK";
-
 /* Message text of an alert */
 "One or more downloads are in progress" = "Eine oder mehrere Dateien werden heruntergeladen";
 
@@ -365,15 +353,6 @@
 "Open Article Page in External Browser" = "Öffne Artikelseite im externen Browser";
 
 /* No comment provided by engineer. */
-"Open Frame" = "Öffne Frame";
-
-/* No comment provided by engineer. */
-"Open Image in %@" = "Öffne Bild in %@";
-
-/* No comment provided by engineer. */
-"Open Image in New Tab" = "Bild im neuem Tab öffnen";
-
-/* No comment provided by engineer. */
 "Open Link in %@" = "Link in „%@“ öffnen";
 
 /* No comment provided by engineer. */
@@ -381,9 +360,6 @@
 
 /* No comment provided by engineer. */
 "Open Link in New Tab" = "Link in neuem Tab öffnen";
-
-/* No comment provided by engineer. */
-"Open Page in %@" = "Öffne Seite in %@";
 
 /* No comment provided by engineer. */
 "Open Reader Authentication Failed" = "Open Reader Authentifizierungsfehler";
@@ -441,9 +417,6 @@
 "Refresh completed" = "Aktualisierung abgeschlossen";
 
 /* No comment provided by engineer. */
-"Refresh the current page" = "Seite neu laden";
-
-/* No comment provided by engineer. */
 "Refreshing folder images…" = "Aktualisiere Ordnericons …";
 
 /* No comment provided by engineer. */
@@ -468,24 +441,22 @@
 "Retrieving folder image for Open Reader Feed" = "Empfange Ordnerbilder für den Open Reader Feed";
 
 /* No comment provided by engineer. */
-"Return to the previous page" = "Die vorherige Seite anzeigen";
-
-/* No comment provided by engineer. */
 "RSS Icon not found!" = "RSS-Symbol nicht gefunden!";
 
 /* A formatted URL string with the javascript: URL scheme. */
 "Run script “%@”" = "Skript „%@“ ausführen";
 
-/* Placeholder title of a search field */
-"Search all articles" = "In allen Artikeln suchen";
+/* Toolbar item label */
+"Safari Reading List" = "Safari-Leseliste";
 
-/* No comment provided by engineer. */
-"Search all articles or the current web page" = "Alle Artikel oder die aktuelle Webseite durchsuchen";
-
-/* Toolbar item label
+/* Search panel title
+   Toolbar item label
    Toolbar item palette label
    Toolbar item tooltip */
-"Search Articles" = "Artikel durchsuchen";
+"Search" = "Suchen";
+
+/* Placeholder title of a search field */
+"Search all articles" = "In allen Artikeln suchen";
 
 /* Placeholder title of a search field */
 "Search current web page" = "Webseite durchsuchen";
@@ -531,9 +502,6 @@
 
 /* Data field name visible in menu/article list/smart folder definition */
 "Subject" = "Betreff";
-
-/* No comment provided by engineer. */
-"Subscribe to the feed for this page" = "Den Feed für diese Seite abonnieren";
 
 /* Pseudo field name visible in menu/article list */
 "Summary" = "Zusammenfassung";
