--- a/Vienna/Resources/fr.lproj/Localizable.strings
+++ b/Vienna/Resources/fr.lproj/Localizable.strings
@@ -98,12 +98,6 @@
 /* No comment provided by engineer. */
 "Connecting to Open Reader server to retrieve %@" = "Connection sur le serveur Open Reader pour récupérer %@";
 
-/* No comment provided by engineer. */
-"Copy Link to Clipboard" = "Copier le lien dans le presse-papier";
-
-/* No comment provided by engineer. */
-"Copy Page Link to Clipboard" = "Copier le lien de la page";
-
 /* Copy URL */
 "Copy URL" = "Copier l'URL";
 
@@ -190,9 +184,6 @@
 /* Data field name (URL) visible in menu/article list */
 "Enclosure URL" = "URL du fichier joint";
 
-/* No comment provided by engineer. */
-"Enter the URL here" = "Entrer l'URL ici";
-
 /* Already subscribed title */
 "Error" = "Erreur";
 
@@ -255,9 +246,6 @@
 
 /* No comment provided by engineer. */
 "Forcing Refresh subscriptions…" = "Rafraichissement forcé des abonnements…";
-
-/* No comment provided by engineer. */
-"Go forward to the next page" = "Avancer vers la page suivante";
 
 /* No comment provided by engineer. */
 "Got HTTP status 304 - No news from last check" = "Code retour HTTP 304 - Pas de nouvel article depuis la dernière recherche";
@@ -349,9 +337,6 @@
 /* No comment provided by engineer. */
 "No new articles available" = "Aucun nouvel article disponible";
 
-/* Title of a button on an alert */
-"OK" = "OK";
-
 /* Message text of an alert */
 "One or more downloads are in progress" = "Un ou plusieurs téléchargements sont en cours";
 
@@ -368,15 +353,6 @@
 "Open Article Page in External Browser" = "Afficher la page de l'article dans le navigateur externe";
 
 /* No comment provided by engineer. */
-"Open Frame" = "Afficher le cadre";
-
-/* No comment provided by engineer. */
-"Open Image in %@" = "Afficher l'image dans %@";
-
-/* No comment provided by engineer. */
-"Open Image in New Tab" = "Ouvrir l'image dans un nouvel onglet";
-
-/* No comment provided by engineer. */
 "Open Link in %@" = "Ouvrir le lien dans %@";
 
 /* No comment provided by engineer. */
@@ -384,9 +360,6 @@
 
 /* No comment provided by engineer. */
 "Open Link in New Tab" = "Ouvrir le lien dans un nouvel onglet";
-
-/* No comment provided by engineer. */
-"Open Page in %@" = "Ouvrir la page dans %@";
 
 /* No comment provided by engineer. */
 "Open Reader Authentication Failed" = "Échec d'authentification sur le serveur Open Reader";
@@ -444,9 +417,6 @@
 "Refresh completed" = "Rafraîchissement terminé";
 
 /* No comment provided by engineer. */
-"Refresh the current page" = "Rafraîchir la page courante";
-
-/* No comment provided by engineer. */
 "Refreshing folder images…" = "Rafraîchissement des icônes des dossiers…";
 
 /* No comment provided by engineer. */
@@ -471,9 +441,6 @@
 "Retrieving folder image for Open Reader Feed" = "Récupération de l'icône associée au flux Open Reader";
 
 /* No comment provided by engineer. */
-"Return to the previous page" = "Retourner à la page précédente";
-
-/* No comment provided by engineer. */
 "RSS Icon not found!" = "Icône RSS non trouvée !";
 
 /* A formatted URL string with the javascript: URL scheme. */
@@ -482,16 +449,14 @@
 /* Toolbar item label */
 "Safari Reading List" = "Liste de lecture de Safari";
 
-/* Placeholder title of a search field */
-"Search all articles" = "Chercher dans les articles";
-
-/* No comment provided by engineer. */
-"Search all articles or the current web page" = "Chercher dans les articles ou dans la page actuelle";
-
-/* Toolbar item label
+/* Search panel title
+   Toolbar item label
    Toolbar item palette label
    Toolbar item tooltip */
-"Search Articles" = "Rechercher des articles";
+"Search" = "Rechercher";
+
+/* Placeholder title of a search field */
+"Search all articles" = "Chercher dans les articles";
 
 /* Placeholder title of a search field */
 "Search current web page" = "Chercher dans la page actuelle";
@@ -537,9 +502,6 @@
 
 /* Data field name visible in menu/article list/smart folder definition */
 "Subject" = "Sujet";
-
-/* No comment provided by engineer. */
-"Subscribe to the feed for this page" = "S'abonner au flux pour cette page";
 
 /* Pseudo field name visible in menu/article list */
 "Summary" = "Résumé";
