--- a/Vienna/Resources/nl.lproj/Localizable.strings
+++ b/Vienna/Resources/nl.lproj/Localizable.strings
@@ -98,12 +98,6 @@
 /* No comment provided by engineer. */
 "Connecting to Open Reader server to retrieve %@" = "Verbinden met Open Reader-server om %@ op te vragen";
 
-/* No comment provided by engineer. */
-"Copy Link to Clipboard" = "Kopieer link naar klembord";
-
-/* No comment provided by engineer. */
-"Copy Page Link to Clipboard" = "Kopieer locatie naar klembord";
-
 /* Copy URL */
 "Copy URL" = "Kopieer URL";
 
@@ -190,9 +184,6 @@
 /* Data field name (URL) visible in menu/article list */
 "Enclosure URL" = "Bijlage URL";
 
-/* No comment provided by engineer. */
-"Enter the URL here" = "Typ de URL hier";
-
 /* Already subscribed title */
 "Error" = "Fout";
 
@@ -255,9 +246,6 @@
 
 /* No comment provided by engineer. */
 "Forcing Refresh subscriptions…" = "Abonnementen geforceerd vernieuwen…";
-
-/* No comment provided by engineer. */
-"Go forward to the next page" = "Ga verder naar de volgende pagina";
 
 /* No comment provided by engineer. */
 "Got HTTP status 304 - No news from last check" = "HTTP-status 304 ontvangen – geen nieuws sinds de laatste controle";
@@ -349,9 +337,6 @@
 /* No comment provided by engineer. */
 "No new articles available" = "Geen nieuwe artikelen beschikbaar";
 
-/* Title of a button on an alert */
-"OK" = "OK";
-
 /* Message text of an alert */
 "One or more downloads are in progress" = "Eén of meer downloads zijn nog bezig";
 
@@ -368,15 +353,6 @@
 "Open Article Page in External Browser" = "Open artikelpagina in externe browser";
 
 /* No comment provided by engineer. */
-"Open Frame" = "Open frame";
-
-/* No comment provided by engineer. */
-"Open Image in %@" = "Open afbeelding in %@";
-
-/* No comment provided by engineer. */
-"Open Image in New Tab" = "Open afbeelding in nieuwe tab";
-
-/* No comment provided by engineer. */
 "Open Link in %@" = "Open link in %@";
 
 /* No comment provided by engineer. */
@@ -384,9 +360,6 @@
 
 /* No comment provided by engineer. */
 "Open Link in New Tab" = "Open link in nieuwe tab";
-
-/* No comment provided by engineer. */
-"Open Page in %@" = "Open pagina in %@";
 
 /* No comment provided by engineer. */
 "Open Reader Authentication Failed" = "Open Reader-identiteitscontrole mislukt";
@@ -444,9 +417,6 @@
 "Refresh completed" = "Bijwerken voltooid";
 
 /* No comment provided by engineer. */
-"Refresh the current page" = "Laad de huidige pagina opnieuw";
-
-/* No comment provided by engineer. */
 "Refreshing folder images…" = "Map-iconen bijwerken…";
 
 /* No comment provided by engineer. */
@@ -471,9 +441,6 @@
 "Retrieving folder image for Open Reader Feed" = "Mapsymbool voor Open Reader-feed ophalen";
 
 /* No comment provided by engineer. */
-"Return to the previous page" = "Ga terug naar de vorige pagina";
-
-/* No comment provided by engineer. */
 "RSS Icon not found!" = "RSS-symbool niet gevonden!";
 
 /* A formatted URL string with the javascript: URL scheme. */
@@ -482,16 +449,14 @@
 /* Toolbar item label */
 "Safari Reading List" = "Safari-leeslijst";
 
-/* Placeholder title of a search field */
-"Search all articles" = "Zoek naar artikelen";
-
-/* No comment provided by engineer. */
-"Search all articles or the current web page" = "Doorzoek alle artikelen of de huidige webpagina";
-
-/* Toolbar item label
+/* Search panel title
+   Toolbar item label
    Toolbar item palette label
    Toolbar item tooltip */
-"Search Articles" = "Zoek artikelen";
+"Search" = "Zoek";
+
+/* Placeholder title of a search field */
+"Search all articles" = "Zoek naar artikelen";
 
 /* Placeholder title of a search field */
 "Search current web page" = "Doorzoek huidige webpagina";
@@ -537,9 +502,6 @@
 
 /* Data field name visible in menu/article list/smart folder definition */
 "Subject" = "Onderwerp";
-
-/* No comment provided by engineer. */
-"Subscribe to the feed for this page" = "Abonneer op de feed van deze pagina";
 
 /* Pseudo field name visible in menu/article list */
 "Summary" = "Samenvatting";
