--- a/Vienna/Resources/gl.lproj/Localizable.strings
+++ b/Vienna/Resources/gl.lproj/Localizable.strings
@@ -406,7 +406,8 @@
 /* No comment provided by engineer. */
 "Search Results" = "Resultados da procura";
 
-/* Title of a popup menu item */
+/* Title of a menu item
+   Title of a popup menu item */
 "Select…" = "Seleccionar…";
 
 /* No comment provided by engineer. */
