--- a/Vienna/Resources/lt.lproj/Localizable.strings
+++ b/Vienna/Resources/lt.lproj/Localizable.strings
@@ -406,7 +406,8 @@
 /* No comment provided by engineer. */
 "Search Results" = "Paieškos rezultatai";
 
-/* Title of a popup menu item */
+/* Title of a menu item
+   Title of a popup menu item */
 "Select…" = "Pasirinkti…";
 
 /* No comment provided by engineer. */
