--- a/Vienna/Resources/pt-BR.lproj/Localizable.strings
+++ b/Vienna/Resources/pt-BR.lproj/Localizable.strings
@@ -331,7 +331,8 @@
 /* No comment provided by engineer. */
 "Search Results" = "Pesquisar Resultados";
 
-/* Title of a popup menu item */
+/* Title of a menu item
+   Title of a popup menu item */
 "Select…" = "Selecionar…";
 
 /* No comment provided by engineer. */
