--- a/Vienna/Resources/ru.lproj/Localizable.strings
+++ b/Vienna/Resources/ru.lproj/Localizable.strings
@@ -448,7 +448,8 @@
 /* Label of a button on an open panel */
 "Select" = "Выбрать";
 
-/* Title of a popup menu item */
+/* Title of a menu item
+   Title of a popup menu item */
 "Select…" = "Выбрать…";
 
 /* A formatted URL string with the mailto: URL scheme. */
