--- a/Vienna/Resources/tr.lproj/Localizable.strings
+++ b/Vienna/Resources/tr.lproj/Localizable.strings
@@ -322,7 +322,8 @@
 /* No comment provided by engineer. */
 "Search Results" = "Arama Sonuçları";
 
-/* Title of a popup menu item */
+/* Title of a menu item
+   Title of a popup menu item */
 "Select…" = "Seç…";
 
 /* No comment provided by engineer. */
