--- a/Vienna/Resources/eu.lproj/Localizable.strings
+++ b/Vienna/Resources/eu.lproj/Localizable.strings
@@ -283,7 +283,8 @@
 /* No comment provided by engineer. */
 "Retrieving folder image" = "Direktorioaren irudia jasotzen";
 
-/* Title of a popup menu item */
+/* Title of a menu item
+   Title of a popup menu item */
 "Select…" = "Aukeratu…";
 
 /* Title of a popup menu item */
