--- a/Vienna/Resources/it.lproj/Localizable.strings
+++ b/Vienna/Resources/it.lproj/Localizable.strings
@@ -319,7 +319,8 @@
 /* No comment provided by engineer. */
 "Search Results" = "Cerca nei Risultati";
 
-/* Title of a popup menu item */
+/* Title of a menu item
+   Title of a popup menu item */
 "Select…" = "Seleziona…";
 
 /* No comment provided by engineer. */
