--- a/Vienna/Resources/zh-Hans.lproj/Localizable.strings
+++ b/Vienna/Resources/zh-Hans.lproj/Localizable.strings
@@ -385,7 +385,8 @@
 /* No comment provided by engineer. */
 "Search Results" = "搜索结果";
 
-/* Title of a popup menu item */
+/* Title of a menu item
+   Title of a popup menu item */
 "Select…" = "选择…";
 
 /* No comment provided by engineer. */
