--- a/Vienna/Interfaces/nl.lproj/MainMenu.strings
+++ b/Vienna/Interfaces/nl.lproj/MainMenu.strings
@@ -266,10 +266,10 @@
 "1116.title" = "Verkort";
 
 /* Class = "NSMenuItem"; title = "Filter By"; ObjectID = "1117"; */
-"1117.title" = "Filter Op";
+"1117.title" = "Filter op";
 
 /* Class = "NSMenu"; title = "Filter By"; ObjectID = "1118"; */
-"1118.title" = "Filter Op";
+"1118.title" = "Filter op";
 
 /* Class = "NSMenuItem"; title = "Keyboard Shortcuts"; ObjectID = "1146"; */
 "1146.title" = "Toetscombinaties";
